[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "huggingbutt"
version = "0.0.5a"
authors = [
  { name="huggingbutt", email="huggingbutt@outlook.com" },
]
description = "Client library to download and publish environments, agents on the huggingbutt.com hub"
readme = "README.md"
requires-python = ">=3.10.1,<=3.10.12"
dependencies = [
    "numpy==1.21.2",
    "grpcio>=1.11.0,<=1.48.2",
    "protobuf>=3.6,<3.20",
    "numpy>=1.13.3,<2.0",
    "tqdm",
    "requests",
    "stable_baselines3>=2.1.0",
    "mlagents-envs==0.30.0",
    "tensorboard>=2.14",
    "toml",
    "pandas==1.5.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
homepage = "https://huggingbutt.com"
source  = "https://github.com/huggingbutt/huggingbutt"
