[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "huggingbutt"
version = "0.0.5"
authors = [
  { name="huggingbutt", email="huggingbutt@outlook.com" },
]
description = "Client library to download and publish environments, agents on the huggingbutt.com hub"
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "numpy>=1.24.4",
    "tqdm",
    "requests",
    "gymnasium>=0.28.1",
    "stable_baselines3>=2.0.0",
    "tensorboard>=2.11.2",
    "toml",
    "pandas>=1.5.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
homepage = "https://huggingbutt.com"
source  = "https://github.com/huggingbutt/huggingbutt"
